--- a/Data Encryption/extra/Bib/papers.bib
+++ b/Data Encryption/extra/Bib/papers.bib
@@ -1,10 +1,35 @@
 @article{shannon1948,
-  title        = {A mathematical theory of communication},
-  author       = {Claude E. Shannon},
-  journal      = {Bell Syst. Tech. J.},
-  volume       = {27},
-  number       = {3},
-  pages        = {379--423},
-  year         = {1948},
-  doi          = {10.1002/J.1538-7305.1948.TB01338.X},
+    author       = {Claude E. Shannon},
+    title        = {A mathematical theory of communication},
+    journal      = {Bell Syst. Tech. J.},
+    volume       = {27},
+    number       = {3},
+    pages        = {379--423},
+    year         = {1948},
+    doi          = {10.1002/J.1538-7305.1948.TB01338.X},
+}
+
+@article{diffieH1976,
+    author       = {Whitfield Diffie and Martin E. Hellman},
+    title        = {New directions in cryptography},
+    journal      = {{IEEE} Trans. Inf. Theory},
+    volume       = {22},
+    number       = {6},
+    pages        = {644--654},
+    year         = {1976},
+    doi          = {10.1109/TIT.1976.1055638},
+}
+
+
+@article{adlemanRS1977,
+  author       = {Ronald L. Rivest and
+                  Adi Shamir and
+                  Leonard M. Adleman},
+  title        = {A Method for Obtaining Digital Signatures and Public-Key Cryptosystems},
+  journal      = {Commun. {ACM}},
+  volume       = {21},
+  number       = {2},
+  pages        = {120--126},
+  year         = {1978},
+  doi          = {10.1145/359340.359342},
 }
