--- a/Data Encryption/main/Data Encryption.tex
+++ b/Data Encryption/main/Data Encryption.tex
@@ -9,6 +9,7 @@
 \makeglossaries 
 \newacronym{gcd}{GCD}{Greatest Common Divisor}
 \newacronym{lcm}{LCM}{Least Common Multiple}
+\newacronym{ifp}{IFP}{Integers Factorization Problem}
 
 % Document specific options 
 \begin{document}
@@ -19,6 +20,9 @@
 
     \section{Mathematical background}
     \subfile{../sections/simple/2 - Mathematical background}
+
+    \section{Public-key cryptography}
+    \subfile{../sections/simple/3 - Public-key cryptography}
 
     \printbibliography
     \printglossaries
