DataEnc: section 3 added

--- a/Data Encryption/main/Data Encryption.tex
+++ b/Data Encryption/main/Data Encryption.tex
@@ -10,6 +10,8 @@
 \newacronym{gcd}{GCD}{Greatest Common Divisor}
 \newacronym{lcm}{LCM}{Least Common Multiple}
 \newacronym{ifp}{IFP}{Integers Factorization Problem}
+\newacronym{dlp}{DLP}{Discrete Logarithm Problem}
+\newacronym{ttp}{TTP}{Trusted Third Party}
 
 % Document specific options 
 \begin{document}
