DataEnc: Fixed typos

--- a/Data Encryption/sections/subsub/3.3.2 - ElGamal algorithm elliptic curve.tex
+++ b/Data Encryption/sections/subsub/3.3.2 - ElGamal algorithm elliptic curve.tex
@@ -1,6 +1,6 @@
 \documentclass{subfiles}
 \begin{document}
-    A more, an trickier implementation of the ElGamal algorithm makes use 
+    A trickier implementation of the ElGamal algorithm makes use 
         of elliptic curves. Recall that the ``sum'' of two points \(P\) and 
         \(Q\) of some elliptic curve \(\C*\) is not trivial. 
 
