DataEnc: added (and completed [no review has been done] section 4)

--- a/Data Encryption/main/Data Encryption.tex
+++ b/Data Encryption/main/Data Encryption.tex
@@ -26,6 +26,9 @@
     \section{Public-key cryptography}
     \subfile{../sections/simple/3 - Public-key cryptography}
 
+    \section{Digital signature}
+    \subfile{../sections/simple/4 - Digital signature}
+
     \printbibliography
     \printglossaries
 \end{document}
