--- a/Data Encryption/sections/subsub/3.2.1 - RSA algorithm.tex
+++ b/Data Encryption/sections/subsub/3.2.1 - RSA algorithm.tex
@@ -1,5 +1,5 @@
 \documentclass{subfiles}
-\begin{document}
+\begin{document}\label{Sec:3.2.1}
     Let \(m\) be the message to transmit; to cypher it by the RSA protocol do as follow:
         begin by choosing two odd distinc prime numbers \(p, q\) randomly,
         such that their bitlength is approximately the same. 
